config/deploy/rbac-role.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kube-discovery
spec:
  finalizers:
  - kubernetes
---
apiVersion: v1
kind: Namespace
metadata:
  name: kube-neverdown
spec:
  finalizers:
  - kubernetes
---
apiVersion: v1
kind: Namespace
metadata:
  name: kube-authx
spec:
  finalizers:
  - kubernetes
