config/deploy/authx-apiserver.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    appname: authx-apiserver
  name: authx-apiserver
spec:
  replicas: 1
  selector:
    matchLabels:
      appname: authx-apiserver
  template:
    metadata:
      labels:
        appname: authx-apiserver
    spec:
      containers:
      - args:
        - -httpListenPort=8086
        - -grpcListenPort=8087
        command:
        - /server/authx-apiserver
        image: kongzz45/authx-apiserver:0.0.1
        imagePullPolicy: IfNotPresent
        name: authx-apiserver
        ports:
        - containerPort: 8086
          name: http
          protocol: TCP
        - containerPort: 8087
          name: apigrpc
          protocol: TCP
        volumeMounts:
        - mountPath: /var/conf
          name: certs-volume
      volumes:
      - configMap:
          defaultMode: 420
          items:
          - key: ca.crt
            path: ca.crt
          - key: server.crt
            path: server.crt
          - key: server.key
            path: server.key
          name: neverdown-certs
        name: certs-volume

---
apiVersion: v1
kind: Service
metadata:
  labels:
    appname: authx-apiserver
  name: authx-apiserver
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 8086
    protocol: TCP
    targetPort: 8086
  - name: grpc
    port: 8087
    protocol: TCP
    targetPort: 8087
  selector:
    appname: authx-apiserver
