config/deploy/discovery-controlplane.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    openx-app: controlplane
  name: discovery-controlplane
  namespace: test
spec:
  replicas: 1
  selector:
    matchLabels:
      openx-app: controlplane
  template:
    metadata:
      labels:
        openx-app: controlplane
    spec:
      containers:
      - args:
        - -listenPort=9443
        command:
        - /server/discovery-controlplane
        image: kongzz45/discovery-controlplane:0.0.1
        imagePullPolicy: IfNotPresent
        name: discovery-controlplane
        ports:
        - containerPort: 9443
          protocol: TCP
        volumeMounts:
        - mountPath: /var/conf
          name: certs-volume
      volumes:
      - configMap:
          items:
          - key: ca.crt
            path: ca.crt
          - key: server.crt
            path: server.crt
          - key: server.key
            path: server.key
          name: neverdown-certs
        name: certs-volume
---
apiVersion: v1
kind: Service
metadata:
  labels:
    openx-app: controlplane
  name: discovery-controlplane
  namespace: test
spec:
  ports:
  - name: http
    port: 9443
    protocol: TCP
    targetPort: 9443
  selector:
    openx-app: controlplane
  sessionAffinity: None
  type: ClusterIP
