config/deploy/discovery-etcd.yaml
apiVersion: v1
kind: Service
metadata:
  name: etcd-headless
  namespace: test
spec:
  clusterIP: None
  ports:
  - name: client
    port: 2379
    protocol: TCP
    targetPort: 2379
  - name: peer
    port: 2380
    protocol: TCP
    targetPort: 2380
  selector:
    app: etcd
  type: ClusterIP
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: etcd
  namespace: test
spec:
  replicas: 3
  selector:
    matchLabels:
      app: etcd
  serviceName: etcd-headless
  template:
    metadata:
      labels:
        app: etcd
      name: etcd
    spec:
      containers:
      - command:
        - /bin/sh
        - -c
        - "\nPEERS=\"etcd-0=http://etcd-0.etcd-headless:2380,etcd-1=http://etcd-1.etcd-headless:2380,etcd-2=http://etcd-2.etcd-headless:2380\"\nexec etcd --name ${HOSTNAME} \\\n\t--listen-peer-urls http://0.0.0.0:2380 \\\n\t--listen-client-urls http://0.0.0.0:2379 \\\n\t--advertise-client-urls http://${HOSTNAME}.etcd-headless:2379 \\\n\t--initial-advertise-peer-urls http://${HOSTNAME}.etcd-headless:2380 \\\n\t--initial-cluster-token etcd-cluster-1 \\\n\t--initial-cluster ${PEERS} \\\n\t--initial [...]
        image: bitnami/etcd:3.5.4
        imagePullPolicy: IfNotPresent
        name: etcd
        securityContext:
          runAsUser: 0
        ports:
        - containerPort: 2379
          name: client
          protocol: TCP
        - containerPort: 2380
          name: peer
          protocol: TCP
        volumeMounts:
        - mountPath: /var/run/etcd
          name: task-pv-storage
          readOnly: false
      restartPolicy: Always
      volumes:
      - hostPath:
          path: /kube-discovery/etcd-clusters/etcd
          type: DirectoryOrCreate
        name: task-pv-storage
