config/deploy/grafana.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    appname: grafana
  name: grafana-web
  namespace: monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      appname: grafana
  template:
    metadata:
      labels:
        appname: grafana
    spec:
      containers:
      - env:
        - name: GF_PATHS_DATA
          value: /data
        - name: GF_PATHS_CONFIG
          value: /grafana/config/config.ini
        - name: POD_NAMESPACE
          valueFrom:
            fieldRef:
              apiVersion: v1
              fieldPath: metadata.namespace
        - name: POD_IP
          valueFrom:
            fieldRef:
              apiVersion: v1
              fieldPath: status.podIP
        image: grafana/grafana:10.4.2
        imagePullPolicy: IfNotPresent
        name: grafana-web
        ports:
        - containerPort: 3000
          protocol: TCP
        volumeMounts:
        - mountPath: /data
          name: storage-volume
        - mountPath: /grafana/config
          name: config-volume
      volumes:
      - hostPath:
          path: /monitoring/grafana
          type: DirectoryOrCreate
        name: storage-volume
      - configMap:
          items:
          - key: config.ini
            path: config.ini
          name: grafana
        name: config-volume
---
apiVersion: v1
kind: Service
metadata:
  labels:
    appname: grafana
  name: grafana-web
  namespace: monitoring
spec:
  ports:
  - port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    appname: grafana
  type: ClusterIP
