config/deploy/jingx-apiserver.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    appname: jingx-apiserver
  name: jingx-apiserver
spec:
  replicas: 1
  selector:
    matchLabels:
      appname: jingx-apiserver
  template:
    metadata:
      labels:
        appname: jingx-apiserver
    spec:
      containers:
      - args:
        - -listenPort=8083
        command:
        - /server/jingx-apiserver
        image: kongzz45/jingx-apiserver:0.0.1
        imagePullPolicy: IfNotPresent
        name: jingx-apiserver
        ports:
        - containerPort: 8083
          name: http
          protocol: TCP
        volumeMounts:
        - mountPath: /var/conf
          name: certs-volume
      volumes:
      - configMap:
          defaultMode: 420
          items:
          - key: ca.crt
            path: ca.crt
          - key: server.crt
            path: server.crt
          - key: server.key
            path: server.key
          name: neverdown-certs
        name: certs-volume
---
apiVersion: v1
kind: Service
metadata:
  labels:
    appname: jingx-apiserver
  name: jingx-apiserver
spec:
  ports:
  - name: http
    port: 8083
    protocol: TCP
    targetPort: 8083
  selector:
    appname: jingx-apiserver
  type: ClusterIP
