config/deploy/jingx-etcd.yaml
apiVersion: v1
kind: Service
metadata:
  name: jingx-etcd-headless
spec:
  clusterIP: None
  ports:
  - name: client
    port: 2379
    protocol: TCP
    targetPort: 2379
  - name: peer
    port: 2380
    protocol: TCP
    targetPort: 2380
  selector:
    app: jingx-etcd
  type: ClusterIP
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: jingx-etcd
spec:
  replicas: 3
  selector:
    matchLabels:
      app: jingx-etcd
  serviceName: jingx-etcd-headless
  template:
    metadata:
      labels:
        app: jingx-etcd
      name: jingx-etcd
    spec:
      containers:
      - command:
        - /bin/sh
        - -c
        - "\nPEERS=\"jingx-etcd-0=http://jingx-etcd-0.jingx-etcd-headless:2380,jingx-etcd-1=http://jingx-etcd-1.jingx-etcd-headless:2380,jingx-etcd-2=http://jingx-etcd-2.jingx-etcd-headless:2380\"\nexec etcd --name ${HOSTNAME} \\\n\t--listen-peer-urls http://0.0.0.0:2380 \\\n\t--listen-client-urls http://0.0.0.0:2379 \\\n\t--advertise-client-urls http://${HOSTNAME}.jingx-etcd-headless:2379 \\\n\t--initial-advertise-peer-urls http://${HOSTNAME}.jingx-etcd-headless:2380 \\\n\t--initial-cluster-tok [...]
        image: bitnami/etcd:3.5.4
        imagePullPolicy: IfNotPresent
        name: jingx-etcd
        securityContext:
          runAsUser: 0
        ports:
        - containerPort: 2379
          name: client
          protocol: TCP
        - containerPort: 2380
          name: peer
          protocol: TCP
        volumeMounts:
        - mountPath: /var/run/etcd
          name: task-pv-storage
          readOnly: false
      restartPolicy: Always
      volumes:
      - hostPath:
          path: /jingx/etcd-clusters/etcd
          type: DirectoryOrCreate
        name: task-pv-storage
