config/deploy/monitoring.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    appname: prometheus
  name: prometheus-server
  namespace: monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      appname: prometheus
  template:
    metadata:
      labels:
        appname: prometheus
    spec:
      containers:
      - args:
        - --config.file=/etc/prometheus/prometheus.yaml
        - --storage.tsdb.path=/data/prometheus
        - --storage.tsdb.retention.time=3d
        command:
        - /bin/prometheus
        image: prom/prometheus:latest
        imagePullPolicy: IfNotPresent
        name: prometheus-server
        ports:
        - containerPort: 9090
          protocol: TCP
        volumeMounts:
        - mountPath: /etc/prometheus
          name: config-volume
        - mountPath: /data/prometheus
          name: storage-volume
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      serviceAccount: prometheus
      serviceAccountName: prometheus
      volumes:
      - configMap:
          defaultMode: 420
          items:
          - key: prometheus.yml
            path: prometheus.yaml
          name: promeconfig
        name: config-volume
      - hostPath:
          path: /monitoring/prometheus
          type: DirectoryOrCreate
        name: storage-volume
---
apiVersion: v1
kind: Service
metadata:
  labels:
    appname: prometheus
  name: prometheus-server
  namespace: monitoring
spec:
  ports:
  - port: 9090
    protocol: TCP
    targetPort: 9090
  selector:
    appname: prometheus
  type: ClusterIP
