config/deploy/openx-apiserver.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    appname: openx-apiserver
  name: openx-apiserver
spec:
  replicas: 1
  selector:
    matchLabels:
      appname: openx-apiserver
  template:
    metadata:
      annotations:
        prometheus.io/path: /metrics
        prometheus.io/port: "8081"
        prometheus.io/scrape: "true"
      labels:
        appname: openx-apiserver
    spec:
      containers:
      - args:
        - -listenPort=8080
        command:
        - /server/openx-apiserver
        image: kongzz45/openx-apiserver:0.0.1
        imagePullPolicy: IfNotPresent
        name: openx-apiserver
        ports:
        - containerPort: 8080
          protocol: TCP
        volumeMounts:
        - mountPath: /var/conf
          name: certs-volume
      serviceAccount: openx-controller
      serviceAccountName: openx-controller
      volumes:
      - configMap:
          defaultMode: 420
          items:
          - key: ca.crt
            path: ca.crt
          - key: server.crt
            path: server.crt
          - key: server.key
            path: server.key
          name: neverdown-certs
        name: certs-volume
---
apiVersion: v1
kind: Service
metadata:
  labels:
    appname: openx-apiserver
  name: openx-apiserver
  namespace: kube-neverdown
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    appname: openx-apiserver
  type: ClusterIP
